--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -26,6 +26,12 @@
 
                 <div class="row">
                     <div class="col-md-6">
+                        {render_form_field field='api_check_disabled'}
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
                         {render_form_field field='public_consumer'}
                     </div>
                     <div class="col-md-6">
