Add Condition if

--- a/templates/frontOffice/default/hook/siret-js.html
+++ b/templates/frontOffice/default/hook/siret-js.html
@@ -4,53 +4,76 @@
     const fillAddressButton = document.getElementById('fillAddressButton');
     const inputField = document.getElementById('siret_input');
 
-    let currentResult =  null;
+    let currentResult = null;
 
-    fillAddressButton.style.display = 'none'
+    if (fillAddressButton) {
+        fillAddressButton.style.display = 'none';
+    }
 
-    inputField.onkeyup = function() {
-        if (inputField.value === '') {
-            return;
-        }
+    if (inputField) {
+        inputField.onkeyup = function () {
+            if (inputField.value === '') {
+                return;
+            }
 
-        console.log("URL:", url.replace('_Q_', encodeURIComponent(inputField.value)));
+            console.log("URL:", url.replace('_Q_', encodeURIComponent(inputField.value)));
 
-        fetch(url.replace('_Q_', encodeURIComponent(inputField.value)))
-            .then(response => {
-                if (! response.ok) {
-                    throw new Error("Invalid response");
-                }
+            fetch(url.replace('_Q_', encodeURIComponent(inputField.value)))
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error("Invalid response");
+                    }
 
-                return response.json();
-            }).then(result => {
+                    return response.json();
+                }).then(result => {
                 currentResult = result;
 
                 console.log('SUCCESS BLOCK: ', result);
-                fillAddressButton.style.display = 'block';
+                if (fillAddressButton) {
+                    fillAddressButton.style.display = 'block';
+                }
             }).catch(error => {
-                fillAddressButton.style.display = 'none';
+                if (fillAddressButton) {
+                    fillAddressButton.style.display = 'none';
+                }
 
                 currentResult = null;
 
                 console.log('ERROR:', error);
-            })
+            });
+        }
     }
 
-    fillAddressButton.onclick = function() {
-        if (currentResult === null) {
-            return;
+    if (fillAddressButton) {
+        fillAddressButton.onclick = function () {
+            if (currentResult === null) {
+                return;
+            }
+
+            const adress = currentResult.etablissement.adresseEtablissement;
+
+            const inputCompany = document.getElementById('company');
+            const inputAdress1 = document.getElementById('address1');
+            const inputZipCode = document.getElementById('zipcode');
+            const inputCity = document.getElementById('city');
+
+            if (inputCompany) {
+                inputCompany.value = currentResult.etablissement.uniteLegale.denominationUniteLegale;
+            }
+            if (inputCity) {
+                inputCity.value = adress.libelleCommuneEtablissement;
+            }
+            if (inputZipCode) {
+                inputZipCode.value = adress.codeCommuneEtablissement;
+            }
+            if (inputAdress1) {
+                inputAdress1.value = (
+                    adress.numeroVoieEtablissement + ' ' +
+                    adress.typeVoieEtablissement + ' ' +
+                    adress.libelleVoieEtablissement + ', ' +
+                    adress.libelleCommuneEtablissement
+                ).trim();
+            }
         }
-
-        const adress = currentResult.etablissement.adresseEtablissement;
-
-        const inputCompany= document.getElementById('company');
-        const inputAdress1 = document.getElementById('address1');
-        const inputZipCode = document.getElementById('zipcode');
-        const inputCity = document.getElementById('city');
-
-        inputCompany.value = currentResult.etablissement.uniteLegale.denominationUniteLegale;
-        inputCity.value = adress.libelleCommuneEtablissement;
-        inputZipCode.value = adress.codeCommuneEtablissement;
-        inputAdress1.value = (adress.numeroVoieEtablissement+' '+adress.typeVoieEtablissement+' '+adress.libelleVoieEtablissement+', '+adress.libelleCommuneEtablissement).trim();
     }
 </script>
